packages/taquito-michel-codec/test/contracts_010/ill_typed/pack_big_map.tz
parameter unit;
storage (pair (big_map int int) unit);
code { CDAR;
       DUP; PACK; DROP;
       UNIT; SWAP; PAIR;
       NIL operation;
       PAIR; }
